# rust-webservices-demo

./: .gitignore  Cargo.toml  README.md
apollo-server/: gateway.js  package-lock.json  package.json
books-service/: Cargo.toml  Dockerfile
books-service/src/: main.rs
user-service/: Cargo.toml
user-service/src/: main.rs
