[package]
name = "books-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.0.0-beta.14"
actix-rt = "2.5.0"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
sqlx = { version = "0.3", features = ["runtime-async-std", "macros", "chrono", "json", "postgres", "uuid"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
async-nats = "0.10.1"
nats = "0.11.0"
tokio = "1.15.0"
