[package]
name = "rust-webservices-demo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
serde = { version = "1.0", features = ["derive"] }
dotenv = "0.15"
sqlx = { version = "0.3", features = ["runtime-async-std", "macros", "chrono", "json", "postgres", "uuid"] }
anyhow = "1.0.28"
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
